--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 
 # dependencies
 /node_modules
-/.idea
 /.pnp
 .pnp.js
 
@@ -22,3 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# .idea
+.idea
+
+# .env
+.env
